[package]
name = "zkPoP"
version = "0.1.0"
authors = ["tingfei <1228959039@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
pairing = "0.18"
byteorder = "1"
bellman = "0.8.1"
ff = "0.8.0"
bls12_381 = "0.3.1"
